# CyberAtlas

./: .gitignore  CHANGELOG.md  Makefile  README.md  my_local_sample.pcap  pyproject.toml  requirements.txt
HTB-CTF/: README.md
HTB-CTF/docs/: ARCHITECTURE.md  CHANGELOG.md  COMMAND_REFERENCE.md  DEVELOPMENT_RULES.md  LESSONS_LEARNED.md  MASTER_PROMPT.md  MERGE_PLAN.md  NEXT_SESSION.md  PROJECT_STATE.md  ROADMAP.md  SESSION_CONTEXT.md  TASKS.md  TESTING_PLAN.md
HTB/Artificial/: README.md  writeup.md
HTB/Planning/: README.md  writeup.md
assistant/: __main__.py
assistant/cli/: app.py  crypto.py  decode.py  doctor.py  elf.py  hmac.py  inspect.py  jwt.py  password.py  pcap.py  pe.py  version.py  web.py  wordlist.py  workspace.py
assistant/config/: exceptions.py  loader.py  manager.py  validator.py
assistant/core/engine/: __init__.py  base.py  capabilities.py  context.py  engine.py  exceptions.py  registry.py  result.py  runner.py
assistant/logging/: __init__.py  logger.py
assistant/modules/crypto/: __init__.py  analyzer.py  hmac.py  jwt.py  service.py  (+2 more)
configs/: default.yaml  development.yaml
docs/: 01_Vision.md  21_Development_Journal.md  ARCHITECTURE.md  CHANGELOG.md  ENGINE_SPEC.md  IMPLEMENTATION_PLAN.md  MASTER_BLUEPRINT.md  MASTER_PROMPT.md  NEXT_SESSION.md  PROJECT_STATE.md  ROADMAP.md  Session_Continuation_Prompt.md
docs/HTB-CTF/: ARCHITECTURE.md  CHANGELOG.md  COMMAND_REFERENCE.md  DEVELOPMENT_RULES.md  LESSONS_LEARNED.md  MASTER_PROMPT.md  MERGE_PLAN.md  NEXT_SESSION.md  PROJECT_STATE.md  ROADMAP.md  TASKS.md  TESTING_PLAN.md
scripts/: test_config_manager.py
tests/: conftest.py
tests/config/: test_loader.py  test_manager.py  test_validator.py
tests/modules/: test_crypto.py  test_crypto_analyzer.py  test_crypto_hmac.py  test_crypto_hmac_cli.py  test_crypto_jwt.py  test_crypto_passwords.py  test_crypto_wordlist_cli.py  test_crypto_wordlists.py  test_decode.py  test_elf.py  test_jwt.py  test_pcap.py  test_pe.py  test_web.py
(+17 files in other folders)
